refactor: Use URI.create().toURL() for URL creation in tests